# CSCI4430_Project_1

./: .gitignore  CMakeLists.txt  README.md  README.txt  test-out.txt  test.txt
client/: Makefile  client.c  mtcp_client.c  mtcp_client.h
server/: Makefile  mtcp_common.h  mtcp_server.c  mtcp_server.h  server.c
